syntax = "proto2";

option java_multiple_files = true;
option java_package = "schema.service";
option java_outer_classname = "NodeDialRequestMessages";

package nodedial.server;


message Request {

    oneof request_type {
        GetRequest get = 1;
        PostRequest post = 2;
        DeleteRequest delete = 3;
    }

    message GetRequest {
        required string key = 1;
    }

    message PostRequest {
        required string key = 1;
        required bytes value = 2;
    }

    message DeleteRequest {
        required string key = 1;
    }
}

message Response {

    oneof response_type {
        GetResponse get = 1;
        PostResponse post = 2;
        DeleteResponse delete = 3;
    }

    message GetResponse {
        optional bytes value = 1;
    }

    message PostResponse {}

    message DeleteResponse {}
}


message ReadinessCheck {}

message ReadinessConfirmation {
    required bool is_ready = 1;
}